--- a/loft/index.html
+++ b/loft/index.html
@@ -17,21 +17,19 @@
     <div class="site">
       <div class="title">
         <a href="../index.html">maxrzepka</a>
-
         <a class="extra" href="../écrits.html">écrits</a>
         <a class="extra" href="../news.html">news</a>
         <a class="extra" href="../best.html">best</a>
         <a class="extra" href="index.html"><b>loft</b></a>
       </div>
       
-    <div class="wrapper">
-
-	<section id="intro" class="section intro-section">
+    <div>
+	<section>
 		<header>
-            <a href="https://maps.google.com/maps?f=q&source=s_q&hl=de&geocode=&q=K%C3%A4pfnach,+Horgen+(CH)&aq=&sll=37.0625,-95.677068&sspn=46.543597,92.988281&vpsrc=0&t=h&ie=UTF8&hq=&hnear=K%C3%A4pfnach+Horgen,+Z%C3%BCrich,+Schweiz&z=15">Käpfnach, Horgen (CH)</a> 100m2 High ceiling Apartment with 100m2 Terrasse, 1rst Floor, Quiet, Garage, 8m2 Storage, 20min from Zürich.
+            <a href="https://maps.google.com/maps?f=q&source=s_q&hl=de&geocode=&q=K%C3%A4pfnach,+Horgen+(CH)&aq=&sll=37.0625,-95.677068&sspn=46.543597,92.988281&vpsrc=0&t=h&ie=UTF8&hq=&hnear=K%C3%A4pfnach+Horgen,+Z%C3%BCrich,+Schweiz&z=15">
+              Käpfnach, Horgen (CH)</a> 
+            100m2 high ceiling apartment, 100m2 terrasse, 1rst floor, quiet, garage, 8m2 storage, 20min from Zürich.
 		</header>
-		<p class="lead">
-		</p>
 	</section>
 
     <figure>
@@ -45,11 +43,11 @@
             <img src="wohnung_7_medium.jpg" alt="">
             <img src="wohnung_8_medium.jpg" alt="">
             <img src="wohnung_9_medium.jpg" alt="">
+            <img src="plan_elektro_medium.jpg" alt="">
+            <img src="wohnung_1_medium.jpg" alt="">
             <img src="wohnung_11_medium.jpg" alt="">
             <img src="wohnung_12_medium.jpg" alt="">
-            <img src="wohnung_5_medium.jpg" alt="">
             <img src="wohnung_15_medium.jpg" alt="">
-            <img src="plan_elektro_medium.jpg" alt="">
             <img src="see_rainbow_medium.jpg" alt="">
             <img src="see_sunrise_medium.jpg" alt="">
             <img src="see_winter_blau_medium.jpg" alt="">
