--- a/news.html
+++ b/news.html
@@ -18,7 +18,7 @@
       <div class="title">
         <a href="index.html">maxrzepka</a>
 
-        <a class="extra" href="écrits.html"></a>
+        <a class="extra" href="écrits.html">écrits</a>
         <a class="extra" href="news.html"><b>news</b></a>
         <a class="extra" href="best.html">best</a>
         <a class="extra" href="loft/index.html">loft</a>
