add entrance photo

--- a/loft/index.html
+++ b/loft/index.html
@@ -33,6 +33,7 @@
 	</section>
 
     <figure>
+            <img src="entrance_medium.jpg" alt="">
             <img src="wohnung_5_medium.jpg" alt="">
             <img src="wohnung_6_medium.jpg" alt="">
             <img src="wohnung_2_medium.jpg" alt="">
