--- a/best.html
+++ b/best.html
@@ -22,6 +22,7 @@
         <a class="extra" href="news.html">news</a>
         <a class="extra" href="best.html"><b>best</b></a>
         <a class="extra" href="loft/index.html">loft</a>
+        <a class="extra" href="misc.html">misc</a>
       </div>
       
       
