--- a/loft/index.html
+++ b/loft/index.html
@@ -21,6 +21,7 @@
         <a class="extra" href="../news.html">news</a>
         <a class="extra" href="../best.html">best</a>
         <a class="extra" href="index.html"><b>loft</b></a>
+        <a class="extra" href="../misc.html">misc</a>
       </div>
       
     <div>
