--- a/news.html
+++ b/news.html
@@ -22,6 +22,7 @@
         <a class="extra" href="news.html"><b>news</b></a>
         <a class="extra" href="best.html">best</a>
         <a class="extra" href="loft/index.html">loft</a>
+        <a class="extra" href="misc.html">misc</a>
       </div>
       
       
