add strava link

--- a/loft/index.html
+++ b/loft/index.html
@@ -79,7 +79,8 @@
             <a href="https://vimeo.com/user14760137">vimeo</a>
             <a href="http://www.youtube.com/channel/UCuWVjTCwdWina1oezSMQF9A">youtube</a>
             <a href="http://www.flickr.com/photos/98679954@N02/">flickr</a>
-            <a href="http://instagram.com/maxrzepka">instagram</a><br>
+            <a href="http://instagram.com/maxrzepka">instagram</a>
+            <a href="http://www.strava.com/athletes/maxrzepka">strava</a><br>
 
           </p>
         </div>
