--- a/loft2/index.html
+++ b/loft2/index.html
@@ -32,6 +32,7 @@
 	</section>
 
     <figure>
+            <img src="wapping_beach.jpg" alt="">
             <img src="chimneycourt_view1.jpg" alt="">
             <img src="chimneycourt_view2.jpg" alt="">
             <img src="chimneycourt_livingroom.jpg" alt="">
