--- a/loft/index.html
+++ b/loft/index.html
@@ -27,9 +27,15 @@
     <div>
 	<section>
 		<header>
-            <a href="https://maps.google.com/maps?f=q&source=s_q&hl=de&geocode=&q=K%C3%A4pfnach,+Horgen+(CH)&aq=&sll=37.0625,-95.677068&sspn=46.543597,92.988281&vpsrc=0&t=h&ie=UTF8&hq=&hnear=K%C3%A4pfnach+Horgen,+Z%C3%BCrich,+Schweiz&z=15">
+
+            <a href="http://www.dailymotion.com/video/xg0sys_pub-lindt-jean-paul-goude-1992_lifestyle">Quelques mètres de finesse dans un monde de brutes</a> 
+            in <a href="https://maps.google.com/maps?f=q&source=s_q&hl=de&geocode=&q=K%C3%A4pfnach,+Horgen+(CH)&aq=&sll=37.0625,-95.677068&sspn=46.543597,92.988281&vpsrc=0&t=h&ie=UTF8&hq=&hnear=K%C3%A4pfnach+Horgen,+Z%C3%BCrich,+Schweiz&z=15">
               Käpfnach, Horgen (CH)</a> 
+
+          <p>
             100m2 high ceiling apartment, 100m2 terrasse, 1rst floor, quiet, garage, 8m2 storage, 20min from Zürich.
+            Ideal for meditation and creative minds.
+          </p>
 		</header>
 	</section>
 
@@ -58,6 +64,20 @@
             <img src="terrasse_sunrise_medium.jpg" alt="">
             <img src="see_fog_medium.jpg" alt="">
     </figure>
+    <ul>
+        <li> 100m2 High Ceiling (320cm) Apartment with 2 balcony bathing in light.</li>
+        <li> 100m2 Unique Roof Terrasse mix of Italian stones and Canadian Douglasie.</li>
+        <li> Glass Balustrades.</li>
+        <li> King-size Bath (76cm x 160cm) with <a href="http://www.emauxdebriare.com/accueiluk.php">emaux de Briare</a> mosaic.</li>
+        <li> <a href="http://www.guignard.ch/de/parkett/castera.html">Guignard Castera Marseille massive parquet</a> everywhere (inc. WC/Bathroom).</li>
+        <li> <a href="http://www.feller.ch/de/Produktangebot/Kommunikation/Multimediasystem-dirigion">Feller Dirigon System</a> 
+            including Ethernet connection everywhere (inc. Terrasse).</li>
+        <li> Built-in Audio Cables from <a href="http://www.audiovinyl.ch/">audiovinyl.ch</a>.</li>
+        <li> Kino experience with 5mx2m screen-size.</li>
+        <li> 283cmx240cmx25cm Bookshelf inspired by <a href="http://www.moormann.de/moebel/regale/egal/">Moormann</a>.</li>
+        <li> 50m away from the wood with wild cascades.</li>
+        <li> 200m away from the lake including <a href="http://www.badi-info.ch/zh/horgen-schwimmbad.html">open-air heated swimming-pool</a>.</li>
+    </ul>
     </div>
       <div class="footer">
         <div class="contact">
