--- a/loft/index.html
+++ b/loft/index.html
@@ -47,7 +47,6 @@
             <img src="kueche_seesicht_1_medium.jpg" alt="">
             <img src="kueche_seesicht_2_medium.jpg" alt="">
             <img src="wohnung_3_medium.jpg" alt="">
-            <img src="wohnung_4_medium.jpg" alt="">
             <img src="wohnung_7_medium.jpg" alt="">
             <img src="wohnung_8_medium.jpg" alt="">
             <img src="wohnung_9_medium.jpg" alt="">
@@ -73,7 +72,7 @@
         <li> <a href="http://www.feller.ch/de/Produktangebot/Kommunikation/Multimediasystem-dirigion">Feller Dirigon System</a> 
             including Ethernet connection everywhere (inc. Terrasse).</li>
         <li> Built-in Audio Cables from <a href="http://www.audiovinyl.ch/">audiovinyl.ch</a>.</li>
-        <li> Kino experience with 5mx2m screen-size.</li>
+        <li> Cinema experience with 5mx2m screen size.</li>
         <li> 283cmx240cmx25cm Bookshelf inspired by <a href="http://www.moormann.de/moebel/regale/egal/">Moormann</a>.</li>
         <li> 50m away from the wood with wild cascades.</li>
         <li> 200m away from the lake including <a href="http://www.badi-info.ch/zh/horgen-schwimmbad.html">open-air heated swimming-pool</a>.</li>
