--- a/loft/index.html
+++ b/loft/index.html
@@ -77,6 +77,15 @@
         <li> 50m away from the wood with wild cascades.</li>
         <li> 200m away from the lake including <a href="http://www.badi-info.ch/zh/horgen-schwimmbad.html">open-air heated swimming-pool</a>.</li>
     </ul>
+    <p>
+    Some pictures before the renovation... Once upon a time there was a Citroën Garage ...
+    </p>
+    <figure>
+    <img src="Werkstatt_Eingang.jpg" alt="">
+    <img src="Werkstatt_inside.jpg" alt="">
+    <img src="Werkstatt_Parkplatz.jpg" alt="">
+    <img src="Werkstatt_winter.jpg" alt="">
+   </figure>
     </div>
       <div class="footer">
         <div class="contact">
